[gd_scene load_steps=9 format=3 uid="uid://dpyqweqtlpsrb"]

[ext_resource type="Script" path="res://scripts/menu/title.gd" id="1_jkxbs"]
[ext_resource type="Shader" path="res://assets/shaders/scroll.gdshader" id="2_5r50l"]
[ext_resource type="Texture2D" uid="uid://cn35muhigx5b4" path="res://bg.png" id="3_lr5ua"]
[ext_resource type="PackedScene" uid="uid://rcyrv0xwolqb" path="res://scenes/options/ui_sounds.tscn" id="4_pbife"]
[ext_resource type="PackedScene" uid="uid://chwebnol1raip" path="res://scenes/options/options.tscn" id="5_ayxb0"]
[ext_resource type="PackedScene" uid="uid://cmr2jcqhqdi3l" path="res://scenes/menu/tutorial.tscn" id="7_564ke"]
[ext_resource type="Texture2D" uid="uid://cswtvwr5ar6k2" path="res://assets/mock_logo.png" id="7_tydca"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3tmtn"]
shader = ExtResource("2_5r50l")
shader_parameter/speed = 0.1

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jkxbs")

[node name="Pattern" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_3tmtn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lr5ua")
stretch_mode = 1

[node name="ui_sounds" parent="." instance=ExtResource("4_pbife")]
root_path = NodePath("..")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 10.0
offset_right = 104.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Tutorial" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Options" parent="." instance=ExtResource("5_ayxb0")]
visible = false
layout_mode = 1

[node name="Tutorial_Page" parent="." instance=ExtResource("7_564ke")]
visible = false
layout_mode = 1

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(571, 223)
scale = Vector2(0.585729, 0.57493)
texture = ExtResource("7_tydca")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
